[package]
name = "libp2p-combined-transport"
version = "0.1.0"
edition = "2018"
authors = ["Oliver Wangler <oliver@wngr.de>"]
license = "MIT OR Apache-2.0"
description = "libp2p combined transport"
repository = "https://github.com/wngr/libp2p-maybe-transport/"

[dependencies]
futures = "0.3.16"
libp2p = { version = "0.39.1", default-features = false, features = [] }
parking_lot = "0.11.1"
