[package]
name = "libp2p-combined-transport"
version = "0.1.2"
edition = "2018"
authors = ["Oliver Wangler <oliver@wngr.de>"]
license = "MIT OR Apache-2.0"
description = "libp2p combined transport"
repository = "https://github.com/wngr/libp2p-combined-transport/"

[dependencies]
futures = "0.3.17"
libp2p = { version = "0.39.1", default-features = false, features = [] }
parking_lot = "0.11.2"

[dev-dependencies]
anyhow = "1.0.43"
libp2p = { version = "0.39.1", features = ["tcp-tokio", "websocket", "ping"] }
tokio = { version = "1.11.0", features = ["full"] }
